syntax = "proto3";

package account.v1;
option go_package = "account/v1;accountv1";

service AccountService {
  // 入账
  rpc Credit(CreditRequest) returns(CreditResponse);

}

message CreditRequest{
  string biz = 1;
  int64 biz_id = 2;
  repeated CreditItem items = 3;
}

message CreditItem {
  int64 account = 1;
  AccountType account_type = 2;
  int64 amt = 3;
  string currency = 4;
  int64 uid = 5; // 可选
}

enum AccountType {
  AccountTypeUnknown = 0;
  // 个人赞赏账号
  AccountTypeReward = 1;
  // 平台分成账号
  AccountTypeSystem = 2;
}

message CreditResponse{

}
